Make two indexes searchable through api
