# controllers/redisIndex.go
@@ -10,7 +10,8 @@ import (
 // @Summary Delete all documents from Redisearch
 // @Tags Index
 // @Success 200 {string} string "Ok"
-// @Router /api/index/delete/ [delete]
+// @Router /api/index/delete/articles [delete]
+// @Router /api/index/delete/guide [delete]
 func (rdb *RedisDB) DropIndex(w http.ResponseWriter, r *http.Request) {
 	err := rdb.redisSearch.Drop()
 	if err != nil {
@@ -22,7 +23,7 @@ func (rdb *RedisDB) DropIndex(w http.ResponseWriter, r *http.Request) {
 }
 
 // CreateIndex godoc
-// @Summary Delete all documents from Redisearch
+// @Summary Create Redis index for BestPracticer guides
 // @Tags Index
 // @Success 200 {string} string "Ok"
 // @Router /api/index/create/articles [POST]
@@ -37,11 +38,11 @@ func (rdb *RedisDB) CreateIndex(w http.ResponseWriter, r *http.Request) {
 	fmt.Fprintln(w, http.StatusOK, "Index successfully created")
 }
 
-// CreateIndex godoc
-// @Summary Delete all documents from Redisearch
+// CreateGuideIndex godoc
+// @Summary Create Redis index for BestPracticer guides
 // @Tags Index
 // @Success 200 {string} string "Ok"
-// @Router /api/index/create/ [POST]
+// @Router /api/index/create/guide [POST]
 func (rdb *RedisDB) CreateGuideIndex(w http.ResponseWriter, r *http.Request) {
 	pool := rdb.Pool
 	_, _, err := models.CreateIndex(&pool, "guide")
