# controllers/search.go
@@ -50,9 +50,8 @@ type SuggestOptions struct {
 // Search godoc
 // @Summary Search Redisearch documents
 // @Tags Search
-// @ID term
+// @ID article search
 // @Param term path string true "Search by keyword"
-// @Param service path string false "Options: guide or article"
 // @Param sort query string false "Sort by field"
 // @Param ascending query boolean false "Ascending?"
 // @Param limit query int false "Limit number of results"
@@ -60,11 +59,10 @@ type SuggestOptions struct {
 // @Success 200 {object} SwaggerSearchResponse "Ok"
 // @Failure 404 {object} ApiError "Not Found"
 // @Failure 500 {object} ApiError "Server Error"
-// @Router /api/search/{term}/{service} [get]
+// @Router /api/search/{term} [get]
 func (rdb *RedisDB) Search(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 	term := mux.Vars(r)["term"]
-	service := mux.Vars(r)["service"]
 	sort := r.FormValue("sort")
 	ascending := r.FormValue("ascending")
 	limit := r.FormValue("limit")
@@ -88,12 +86,53 @@ func (rdb *RedisDB) Search(w http.ResponseWriter, r *http.Request) {
 		isAscending = false
 	}
 
-	highlightedFields := []string{"title", "author", "topic"}
-	if service == "guide" {
-		highlightedFields = []string{"text", "topic"}
+	highlighted := []string{"title", "author", "topic"}
+
+	SearchAndSuggest(w, rdb, isAscending, queryLimit, term, sortBy, highlighted)
+}
+
+// SearchGuide godoc
+// @Summary Search Redisearch documents
+// @Tags Search
+// @ID guide search
+// @Param term path string true "Search by keyword"
+// @Param sort query string false "Sort by field"
+// @Param ascending query boolean false "Ascending?"
+// @Param limit query int false "Limit number of results"
+// @Produce json
+// @Success 200 {object} SwaggerSearchResponse "Ok"
+// @Failure 404 {object} ApiError "Not Found"
+// @Failure 500 {object} ApiError "Server Error"
+// @Router /api/search/guide/{term} [get]
+func (rdb *RedisDB) SearchGuide(w http.ResponseWriter, r *http.Request) {
+	w.WriteHeader(http.StatusOK)
+	term := mux.Vars(r)["term"]
+	sort := r.FormValue("sort")
+	ascending := r.FormValue("ascending")
+	limit := r.FormValue("limit")
+
+	queryLimit := 5
+	if len(limit) > 0 {
+		limitAsInt, err := strconv.Atoi(limit)
+		if err != nil {
+			err = json.NewEncoder(w).Encode(validationError)
+		}
+		queryLimit = limitAsInt
 	}
 
-	SearchAndSuggest(w, rdb, isAscending, queryLimit, term, sortBy, highlightedFields)
+	sortBy := "date"
+	if len(sort) > 0 {
+		sortBy = sort
+	}
+
+	isAscending := true
+	if ascending == "false" {
+		isAscending = false
+	}
+
+	highlighted := []string{"text", "topic"}
+
+	SearchAndSuggest(w, rdb, isAscending, queryLimit, term, sortBy, highlighted)
 }
 
 func SearchAndSuggest(
@@ -105,16 +144,16 @@ func SearchAndSuggest(
 	sortBy string,
 	highlightedFields []string,
 ) {
-	var HighlightedFields = highlightedFields
 
 	// Searching with limit and sorting
 	docs, total, err := rdb.redisSearch.Search(redisearch.NewQuery(term).
 		Limit(0, limit).
-		Highlight(HighlightedFields, "<b>", "</b>").
+		Highlight(highlightedFields, "<b>", "</b>").
 		SetSortBy(sortBy, order))
-
 	if err != nil {
 		log.Println(err)
+		json.NewEncoder(w).Encode(notFoundError)
+		return
 	}
 
 	var response []map[string]interface{}
@@ -134,20 +173,18 @@ func SearchAndSuggest(
 		}
 		auto, err := rdb.autoCompleter.SuggestOpts(term, opts)
 		if err != nil {
-			w.WriteHeader(http.StatusNotFound)
-			err = json.NewEncoder(w).Encode(notFoundError)
+			json.NewEncoder(w).Encode(notFoundError)
 			return
 		}
 
 		if len(auto) > 0 {
 			docs, total, err := rdb.redisSearch.Search(redisearch.NewQuery(auto[0].Payload).
 				Limit(0, limit).
-				Highlight(HighlightedFields, "<b>", "</b>").
+				Highlight(highlightedFields, "<b>", "</b>").
 				SetSortBy(sortBy, order))
 
 			if err != nil {
-				w.WriteHeader(http.StatusNotFound)
-				err = json.NewEncoder(w).Encode(notFoundError)
+				json.NewEncoder(w).Encode(notFoundError)
 				return
 			}
 
@@ -173,11 +210,12 @@ func SearchAndSuggest(
 			auto,
 		}
 
-		err = json.NewEncoder(w).Encode(result)
-	}
-	if err != nil {
-		log.Println("failed to encode response")
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+		json.NewEncoder(w).Encode(result)
 		return
 	}
+	//if err != nil {
+	//	log.Println("failed to encode response")
+	//	err = json.NewEncoder(w).Encode(serverError)
+	//	return
+	//}
 }
